<resources>
    <string name="app_name">SiHanDist</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="save_changes">SAVE CHANGE</string>
    <string name="no_inspeksi">Kode Inspeksi</string>
    <string name="rayon">ULP (Rayon)</string>
    <string name="jenis_temuan">Jenis Temuan</string>
    <string name="tingkat_emergency">Tingkat Emergency</string>
    <string name="pemadaman">Pemadaman</string>
    <string name="indikasi">Indikasi</string>
    <string name="arus_pasha_r">Arus Pasha R</string>
    <string name="arus_pasha_s">Arus Pasha S</string>
    <string name="arus_pasha_t">Arus Pasha T</string>
    <string name="arus_pasha_n">Arus Pasha N</string>
    <string name="lokasi_gangguan">Lokasi Gangguan</string>
    <string name="form_hasil_gangguan">Form Hasil Ganguan</string>
    <string name="penyebab_ganguan">Penyebab Gangguan</string>
    <string name="foto_gangguan_1">Foto Gangguan 1</string>
    <string name="foto_gangguan_2">Foto Gangguan 2</string>
    <string name="form_hasil_inspeksi">Form Hasil Inspeksi</string>
    <string name="penyulangan">Penyulangan</string>
    <string name="padam">padam</string>
    <string name="tidak_padam">Tidak Padam</string>
    <string name="jenis_wo">Jenis WO</string>
    <string name="lokasitindaklanjut">Lokasi Tindak Lanjut</string>
    <string name="tgltindaklanjut">Tanggal Tindak Lanjut</string>
    <string name="stat_Tl">Status Tindak Lanjut</string>
    <string name="no_meter">Nomor Meter</string>
    <string name="nama_pelanggan">Nama</string>
    <string name="alamat_pelanggan">Alamat</string>
    <string name="tarif_pelanggan">Tarif</string>
    <string name="daya">Daya</string>
    <string name="blth_ts">BLTH TS</string>
    <string name="rp_ts">Rp TS</string>
    <string name="penetapan">Kali Penetapan</string>
    <string name="jenis_penetapan">Jenis Penetapan</string>
    <string name="tgl_pelaksanaan">Tanggal_Pelaksanaan</string>
    <string name="no_telp_pelanggan">No Telp Pelanggan</string>
    <string name="tag_lokasi">TAG lOKASI</string>
    <string name="kondisi">Kondisi Persil</string>
    <array name="dummy">
        <item name="Select...">Select...</item>
        <item name="Dummy Data 1">Dummy Data 1</item>
        <item name="Dummy Data 2">Dummy Data 2</item>
        <item name="Dummy Data 3">Dummy Data 3</item>
    </array>
</resources>
