<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_15dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:title="Mapples - Cek Lokasi"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:theme="@style/AppTheme.Toolbar"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:layout_width="match_parent"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:background="@color/colorBackground"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="@dimen/_15dp"
                        android:layout_marginRight="@dimen/_15dp"
                        app:cardCornerRadius="7dp">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_marginTop="25dp"
                                style="@style/Widget.TextView.Title"
                                android:text="@string/no_telp_pelanggan"/>

                            <EditText
                                android:id="@+id/idPelanggan"
                                style="@style/Widget.EditText.Primary"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="16dp"
                                android:enabled="false"
                                android:inputType="phone"
                                android:text="@{item.g_uid}"
                                android:textColor="@color/colorTextGray1" />

                            <TextView
                                style="@style/Widget.TextView.Title"
                                android:text="@string/tag_lokasi"/>

                            <LinearLayout
                                android:id="@+id/layoutLokasi"
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:text="@{item.g_lat == null ? `` : item.g_lat + `, ` + item.g_lon}"
                                    android:id="@+id/lokasiGangguan"
                                    android:layout_marginLeft="16dp"
                                    style="@style/Widget.EditText.Primary"
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:foreground="?attr/selectableItemBackground"
                                    tools:ignore="UnusedAttribute" />

                                <ImageView
                                    android:id="@+id/set_lokasi"
                                    android:src="@drawable/ic_location"
                                    android:paddingStart="@dimen/_10dp"
                                    android:paddingLeft="@dimen/_10dp"
                                    android:paddingTop="@dimen/_5dp"
                                    android:paddingBottom="@dimen/_10dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_marginEnd="16dp"
                                    android:layout_marginRight="16dp"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:background="?attr/selectableItemBackgroundBorderless"/>
                            </LinearLayout>


                            <TextView
                                style="@style/Widget.TextView.Title"
                                android:text="@string/kondisi"/>

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/unit"
                                style="@style/Widget.Spinner.Primary"/>

                            <TextView
                                style="@style/Widget.TextView.Title"
                                android:text="Rumah Isi"/>

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/penyulang"
                                style="@style/Widget.Spinner.Primary"/>

                            <TextView
                                android:layout_marginTop="25dp"
                                style="@style/Widget.TextView.Title"
                                android:text="No Meter Lokasi"/>

                            <EditText
                                android:id="@+id/idNoMeter"
                                style="@style/Widget.EditText.Primary"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="16dp"
                                android:enabled="false"
                                android:inputType="phone"
                                android:text="@{item.g_uid}"
                                android:textColor="@color/colorTextGray1" />

                            <TextView
                                style="@style/Widget.TextView.Title"
                                android:text="Tindak Lanjut"/>

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/tl"
                                style="@style/Widget.Spinner.Primary"/>

                            <TextView
                                style="@style/Widget.TextView.Title"
                                android:text="Tindak Lanjut Bayar"/>

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/tlBayar"
                                style="@style/Widget.Spinner.Primary"/>

                            <TextView
                                android:id="@+id/idTrp"
                                style="@style/Widget.TextView.Title"
                                android:text="sisa kwh"/>

                            <LinearLayout
                                android:id="@+id/layKwh"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <EditText
                                    android:id="@+id/idSisaKwh"
                                    android:layout_marginLeft="16dp"
                                    style="@style/Widget.EditText.Primary"
                                    android:layout_width="0dp"
                                    android:layout_weight="2"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:foreground="?attr/selectableItemBackground"
                                    tools:ignore="UnusedAttribute" />

                                <ImageView
                                    android:id="@+id/btnAdd"
                                    android:src="@drawable/ic_add"
                                    android:paddingStart="@dimen/_10dp"
                                    android:paddingLeft="@dimen/_10dp"
                                    android:paddingTop="@dimen/_5dp"
                                    android:paddingBottom="@dimen/_10dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_marginEnd="16dp"
                                    android:layout_marginRight="16dp"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:background="?attr/selectableItemBackgroundBorderless"/>

                                <ImageView
                                    android:id="@+id/btnMin"
                                    android:src="@drawable/ic_min"
                                    android:paddingStart="@dimen/_10dp"
                                    android:paddingLeft="@dimen/_10dp"
                                    android:paddingTop="@dimen/_5dp"
                                    android:paddingBottom="@dimen/_10dp"
                                    android:layout_marginTop="8dp"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:layout_marginEnd="16dp"
                                    android:layout_marginRight="16dp"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:background="?attr/selectableItemBackgroundBorderless"/>

                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>